--- a/index.html
+++ b/index.html
@@ -11,15 +11,22 @@
     </head>
     <body>
         <h1>Writing Counter Online</h1>
-        <div class="stat">
+
+        <div class="word">
             <span>Words: </span>
             <span id='wordctr'>0</span>
-            <br>
-            <span>Time left:</span>
+        </div>
+
+        <div class="time">
+            <span>Time left: </span>
             <span id="time">0</span>
             <button type="button" id="timebtn" onclick="toggle()">Start</button>
             <button type="button" name="resetbtn" onclick="reset()">Reset</button>
+            <br>
+            <span>Custom time limit (minutes): </span>
+            <textarea id="xxxxx" rows="1" cols="3"></textarea>
         </div>
+
         <div class="textbox">
             <textarea id="inputbox" rows="40" cols="160"></textarea>
 
