add about and scroll bar

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
         </div>
 
         <div class="textbox">
-            <textarea id="inputbox" rows="40" cols="100"></textarea>
-
+            <textarea id="inputbox" cols="100"></textarea>
         </div>
+
+        <a href="/about">About</a>
 
     </body>
 </html>
