update readme and about

--- a/about/index.html
+++ b/about/index.html
@@ -6,10 +6,12 @@
     </head>
     <body>
         <span>
-            A page dedicated to simulate TOEFL / GRE writing environment.
+            A page dedicated to a real-life TOEFL / GRE writing environment.
         </span>
         <br>
         <span>Author: <a href="http://hgao.net/about">Gao Hongyuan</a></span>
+        <br>
+        <span>Get source <a href="https://github.com/gaohongyuan/Writing-Counter-Online">here</a>.</span>
 
     </body>
 </html>
