--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
         <script src="js/jquery-2.1.4.min.js" charset="utf-8"></script>
         <script src="js/word.js" charset="utf-8"></script>
         <script src="js/time.js" charset="utf-8"></script>
+        <script>
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-55878990-7', 'auto');
+          ga('send', 'pageview');
+        </script>
+
     </head>
     <body>
         <h1>Writing Counter Online</h1>
