add target blank
to open the link in a new window.

--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@
         <br>
         <span>Author: <a href="http://hgao.net/about">Gao Hongyuan</a></span>
         <br>
-        <span>Get source <a href="https://github.com/gaohongyuan/Writing-Counter-Online">here</a>.</span>
+        <span>Get source <a href="https://github.com/gaohongyuan/Writing-Counter-Online" target="_blank">here</a>.</span>
 
     </body>
 </html>
