--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <title>Writing Counter Online - A Time / Word counter for TOEFL / GRE writing</title>
         <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
         <!-- jquery should be included BEFORE other js files! -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <script src="js/jquery-2.1.4.min.js" charset="utf-8"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
         <script src="js/word.js" charset="utf-8"></script>
         <script src="js/time.js" charset="utf-8"></script>
         <script>
@@ -19,28 +21,31 @@
 
     </head>
     <body>
-        <h1>Writing Counter Online</h1>
+        <div class="container" align="center">
 
-        <div class="word">
-            <span>Words: </span>
-            <span id='wordctr'>0</span>
+            <h1>Writing Counter Online</h1>
+
+            <div class="word" align="left">
+                <span>Words: </span>
+                <span id='wordctr'>0</span>
+            </div>
+
+            <div class="time" align="left">
+                <span>Time left: </span>
+                <span id="time">0</span>
+                <button type="button" class="btn btn-default btn-sm" id="timebtn" onclick="toggle()">Start</button>
+                <button type="button" class="btn btn-default btn-sm" name="resetbtn" onclick="reset()">Reset</button>
+                <br>
+                <span>Custom time limit (minutes): </span>
+                <textarea id="xxxxx" rows="1" cols="3"></textarea>
+            </div>
+
+            <div class="textbox">
+                <textarea id="inputbox"></textarea>
+            </div>
+
+            <a href="/about">About</a>
         </div>
-
-        <div class="time">
-            <span>Time left: </span>
-            <span id="time">0</span>
-            <button type="button" id="timebtn" onclick="toggle()">Start</button>
-            <button type="button" name="resetbtn" onclick="reset()">Reset</button>
-            <br>
-            <span>Custom time limit (minutes): </span>
-            <textarea id="xxxxx" rows="1" cols="3"></textarea>
-        </div>
-
-        <div class="textbox">
-            <textarea id="inputbox" cols="100"></textarea>
-        </div>
-
-        <a href="/about">About</a>
 
     </body>
 </html>
