--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
             <a href="/about">About</a>
         </div>
 
+        <!-- clustrmaps -->
+        <div style="display:none" id="clustrmaps-widget"></div><script type="text/javascript">var _clustrmaps = {'url' : 'wco.hgao.net', 'user' : 1180270, 'server' : '3', 'id' : 'clustrmaps-widget', 'version' : 1, 'date' : '2015-10-05', 'lang' : 'zh', 'corners' : 'square' };(function (){ var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true; s.src = 'http://www3.clustrmaps.com/counter/map.js'; var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);})();</script><noscript><a href="http://www3.clustrmaps.com/user/bac12026e"><img src="http://www3.clustrmaps.com/stats/maps-no_clusters/wco.hgao.net-thumb.jpg" alt="Locations of visitors to this page" /></a></noscript>
+
+
     </body>
 </html>
