--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="options">
                 <input type="checkbox" id="spellcheck" onchange="checkOption()">enable spell check
-                <input type="checkbox" id="enbwordctr" onchange="checkOption()" checked="true">enable word counter
+                <input type="checkbox" id="enbwordctr" onchange="checkOption()" checked="true">enable word count
             </div>
 
             <div class="textbox">
